<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mietzekatze.climbingtracker.OverviewActivity">
    <item
        android:id="@+id/set_scale_saxonian"
        android:orderInCategory="100"
        android:title="@string/set_scale_saxonian"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_scale_french"
        android:orderInCategory="100"
        android:title="@string/set_scale_french"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_scale_sierra"
        android:orderInCategory="100"
        android:title="@string/set_scale_sierra"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_scale_uiaa"
        android:orderInCategory="100"
        android:title="@string/set_scale_uiaa"
        app:showAsAction="never" />
</menu>
